# pytest-playground

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/: __init__.py  sample.py
tests/: conftest.py  test_assertion_message.py  test_mock.py  test_sample.py
